# based_toolchain

./: .bazelrc  .gitignore  MODULE.bazel  README.md
toolchains/: BUILD.bazel  toolchains.MODULE.bazel
toolchains/glibc-linux-gnu-x86_64/: BUILD.bazel  gcc.BUILD.bazel  toolchains.MODULE.bazel
toolchains/glibc-linux-gnu-x86_64/args/: BUILD.bazel
toolchains/glibc-linux-gnu-x86_64/tools/: BUILD.bazel
toolchains/glibc-linux-gnu-x86_64/tools/wrapper/: ld.sh
toolchains/musl-linux-aarch64/: BUILD.bazel  gcc.BUILD.bazel  toolchains.MODULE.bazel
toolchains/musl-linux-aarch64/args/: BUILD.bazel
toolchains/musl-linux-aarch64/tools/: BUILD.bazel
toolchains/musl-linux-aarch64/tools/wrapper/: ar.sh  gcc.sh  ld.sh
