bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_cc", version = "0.1.2")
git_override(
    module_name = "rules_cc",
    commit = "ae0252b004e67428715c565413db51c9e0b17194",
    init_submodules = True,
    remote = "https://github.com/bazelbuild/rules_cc",
)

include("//toolchains:toolchains.MODULE.bazel")
