load("@rules_cc//cc/toolchains:toolchain.bzl", "cc_toolchain")

exports_files([
    "toolchains.MODULE.bazel",
    "gcc.BUILD.bazel",
])

cc_toolchain(
    name = "gcc",
    args = [
        "//toolchains/glibc-linux-gnu-x86_64/args:default_cpp_compile",
        "//toolchains/glibc-linux-gnu-x86_64/args:default_c_compile",
        "//toolchains/glibc-linux-gnu-x86_64/args:default_link",
        "//toolchains/glibc-linux-gnu-x86_64/args:linux_sysroot",
        "//toolchains/args:no_absolute_paths_for_builtins",
        "//toolchains/args:warnings",
    ],
    enabled_features = [
        # "@rules_cc//cc/toolchains/args:experimental_replace_legacy_action_config_features",
        "@rules_cc//cc/toolchains/features/legacy:build_interface_libraries",
        "@rules_cc//cc/toolchains/features/legacy:compiler_input_flags",
        "@rules_cc//cc/toolchains/features/legacy:compiler_output_flags",
        "@rules_cc//cc/toolchains/features/legacy:dynamic_library_linker_tool",
        "@rules_cc//cc/toolchains/features/legacy:fission_support",
        "@rules_cc//cc/toolchains/features/legacy:legacy_compile_flags",
        "@rules_cc//cc/toolchains/features/legacy:legacy_link_flags",
        "@rules_cc//cc/toolchains/features/legacy:library_search_directories",
        "@rules_cc//cc/toolchains/features/legacy:linkstamps",
        "@rules_cc//cc/toolchains/features/legacy:output_execpath_flags",
        "@rules_cc//cc/toolchains/features/legacy:strip_debug_symbols",
        "@rules_cc//cc/toolchains/features/legacy:unfiltered_compile_flags",
        "@rules_cc//cc/toolchains/features/legacy:user_compile_flags",
        "@rules_cc//cc/toolchains/features/legacy:user_link_flags",
        "@rules_cc//cc/toolchains/args/archiver_flags:feature",
        "@rules_cc//cc/toolchains/args/force_pic_flags:feature",
        "@rules_cc//cc/toolchains/args/libraries_to_link:feature",
        "@rules_cc//cc/toolchains/args/linker_param_file:feature",
        "@rules_cc//cc/toolchains/args/preprocessor_defines:feature",
        "@rules_cc//cc/toolchains/args/random_seed:feature",
        "@rules_cc//cc/toolchains/args/runtime_library_search_directories:feature",
        "@rules_cc//cc/toolchains/args/shared_flag:feature",
        # "@rules_cc//cc/toolchains/args/strip_debug_symbols:feature",
        "@rules_cc//cc/toolchains/args/strip_flags:feature",
    ],
    known_features = ["@rules_cc//cc/toolchains/args:experimental_replace_legacy_action_config_features"],
    tool_map = "//toolchains/glibc-linux-gnu-x86_64/tools:all_tools",
)

toolchain(
    name = "toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":gcc",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    visibility = ["//visibility:public"],
)
